frontend-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-ui-svc
spec:
  selector:
    app: stream-ui
  ports:
    - port: 80
      name: http
      targetPort: 80
